# exploring-bluesky-tiled

./: .gitignore  README.md  catalog.db  client.ipynb  config.yml  custom.py  pyproject.toml  tutorial.ipynb
data/data-folder-2/: HAADF.emd
docs/: tiled_emd_guide.md
example-minimal-host/: client.ipynb  create_data.py  server.py
example-minimal-host/data/: scan_a.h5  scan_b.h5
llm-context/: pycroscopy-SciFiReaders-chunks.json
notebooks/: 1_tutorial_on_lazy_loading.ipynb  2_tutorial_on_metadata_search.ipynb
